# SlimeHunter-win

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  SlimeHunter.sln  appveyor.yml  autogen.sh  config.h  config.h.in~  configure.ac  libtool
SlimeHunter/: SlimeHunter.c  SlimeHunter.cu  SlimeHunter.cuh  SlimeHunter.vcxproj  add.cu  add.cuh  commonMcSlimeChunkOracle.h  common_jrandom.h  internal_random.h  jrandom.c  jrandom.cu  jrandom.cuh  jrandom.h  kernel.cu  kernel.cuh  mcSlimeChunkOracle.c  mcSlimeChunkOracle.cu  mcSlimeChunkOracle.cuh  mcSlimeChunkOracle.h  random.h  randomKernel.cuh
SlimeHunterCUDA/: SlimeHunter.c  SlimeHunter.cuh  SlimeHunter.vcxproj  add.cuh  commonMcSlimeChunkOracle.h  jrandom.c  jrandom.cu  jrandom.cuh  jrandom.h  kernel.cu  kernel.cuh  mcSlimeChunkOracle.cu  mcSlimeChunkOracle.cuh  mcSlimeChunkOracle.h  randomKernel.cu  randomKernel.cuh
SlimeHunterInstaller/: SlimeHunterInstaller.vdproj
SlimeHunterMT/: SlimeHunter.c  SlimeHunter.cpp  SlimeHunterMT.cpp  SlimeHunterMT.vcxproj  SlimeHunterMT.vcxproj.filters  cl.cpp  cl.h  cl.hpp  finders.h  internal_random.h  jrandom.c  jrandom.cpp  jrandom.h  jrandom.hpp  kernel.cl  main.cpp  main.hpp  mcSlimeChunkOracle.c  mcSlimeChunkOracle.cpp  mcSlimeChunkOracle.h  omp.cpp  omp.hpp  pch.h  random.c  random.h  resource.h  rnd.h  search.cpp  search.hpp  slimeHunter.h  slimeHunter.hpp
UnitTest1/: UnitTest1.cpp  UnitTest1.vcxproj
poop/: add.cu  add.cuh  kernel.cu  poop.vcxproj
src/: .gitignore  Makefile  Makefile.am  SlimeHunter  SlimeHunter.c  mcSlimeChunkOracle.h
src/.deps/: random.Po  (+2 more)
